# dinotify

./: .travis.yml  LICENSE  README.md  dinotify.html  dub.json  file_hashes.json  index.html  meson.build  sitemap.xml  symbols.js
.github/workflows/: d.yml
dinotify/: Event.html  INotifyTree.html  INotifyTree.read.html  TreeEvent.html  Watch.html  iNotify.html  iNotifyTree.html
source/: dinotify.d
